CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.21rc1

	- Added PAM support for Darwin/MacOS X (STR #550)
	- The web interface now provides a "Set As Default"
	  button to set the default printer or class on a server
	  (STR #577)
	- The HTTP authentication cache was broken (STR #517)
	- The cupstestppd utility now fails PPD files that have
	  a DefaultOption keyword for a non-existance option
	  name (STR #476)
	- Optimized the scanning of new PPD files on scheduler
	  startup (STR #424)
	- The EPM list file did not include the bin, lib, or
	  sbin directories (STR #598)
	- The web interface did not redirect administration
	  tasks to the primary server for a class or printer
	  (STR #491)
	- The cups-lpd mini-daemon did not reject print jobs to
	  queues that were rejecting new print jobs (STR #515)
	- Some calls to the ctype functions did not account for
	  platforms that use a signed char type by default (STR
	  #518)
	- The scheduler could use excess amounts of CPU if a CGI
	  program was sending data faster than the client could
	  take it (STR #595)
	- Updated the Ghostscript 8.x integration stuff (STR
	  #484)
	- The lpd backend used a source port of 732 by default,
	  which is outside of the range defined by RFC 1179;
	  also added a new (default) "reserve=any" option for
	  any priviledged port from 1 to 1023 (STR #474)
	- The scheduler did not check for a valid Listen/Port
	  configuration (STR #499)
	- The cupsPrintFiles() function did not always set the
	  last IPP error message (STR #538)
	- The pstops filter did not write the PostScript header
	  line if the file began with a PJL escape sequence (STR
	  #574)
	- The printer-is-accepting-jobs status of remote
	  printers was not sent to clients via browsing or
	  polling (STR #571)
	- Browse packets did not indicate whether a printer
	  was accepting or rejecting jobs.
	- The web interface did not show the printer state
	  history information (STR #592)